--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.3",
-    "@mui/material": "^6.1.3",
+    "@mui/lab": "^6.0.0-beta.13",
+    "@mui/material": "^6.1.5",
     "@mui/x-charts": "^7.20.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
