--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@mui/lab": "^6.0.0-beta.13",
     "@mui/material": "^6.1.5",
     "@mui/x-charts": "^7.20.0",
+    "@mui/x-data-grid": "^7.22.3",
+    "chart.js": "^4.4.6",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0"
